figured out header requests for BindMethod

--- a/TODO
+++ b/TODO
@@ -11,5 +11,6 @@ Real shit:
     ✔ binary must be installed for dev; I used scoop for windows, it is in the extras package
   ✔ ts-protoc-gen (https://www.npmjs.com/package/ts-protoc-gen)
   ✘ integrate handshake with RPC definition
-  ☐ figure out header negotiations
+  ✔ figure out header negotiations
+    ☐ need to figure out how to pass along ID for BindMethod to subsequent calls
   ☐ verify message sending works
